# stm32f10x_template_cmake

./: .gitignore  CMakeLists.txt
User/: FreeRTOSConfig.h  main.c
